Fixed bug with empty views